[gd_scene load_steps=2 format=3 uid="uid://b4yhoyguxmy3u"]

[ext_resource type="Script" uid="uid://bytxh3udjpavl" path="res://Scripts/Control/SettingsControl.gd" id="1_lqphu"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lqphu")

[node name="SFX" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.673
anchor_top = 0.171
anchor_right = 1.0
anchor_bottom = 0.281
offset_left = -0.296021
offset_top = 0.192001
offset_bottom = -0.0880127
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
text = "SFX"

[node name="SFXHSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.673
anchor_top = 0.281
anchor_right = 1.0
anchor_bottom = 0.306
offset_left = -0.296021
offset_top = -0.0880127
offset_bottom = -0.28801
min_value = -80.0
max_value = 24.0

[node name="Music" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.673
anchor_top = 0.532
anchor_right = 1.0
anchor_bottom = 0.642
offset_left = -0.296021
offset_top = 0.264008
offset_bottom = -0.0160217
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
text = "Music"

[node name="MusicHSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.673
anchor_top = 0.642
anchor_right = 1.0
anchor_bottom = 0.667
offset_left = -0.296021
offset_top = -0.0160217
offset_bottom = -0.216034
min_value = -80.0
max_value = 24.0

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.673
anchor_top = 0.889
anchor_right = 1.0
anchor_bottom = 0.998
offset_left = -0.296021
offset_top = -0.0720215
offset_bottom = 0.295959
grow_horizontal = 2
grow_vertical = 0
text = "Back
"

[connection signal="value_changed" from="SFXHSlider" to="." method="_on_sfxh_slider_value_changed"]
[connection signal="value_changed" from="MusicHSlider" to="." method="_on_music_h_slider_value_changed"]
[connection signal="button_up" from="Back" to="." method="_on_back_button_up"]
